---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2024-10-21
  Changes:
    - Minor formatting changes to some files.
    - Drill removal instantly updates UI
  Bugfixes:
    - Resolved race condition when no drills exist

---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-10-21
  Changes:
    - Factorio 2.0 Compatibility:
      - Updated the mod to be fully compatible with Factorio 2.0 API changes.
      - Replaced all instances of the deprecated global with storage for persistent data management.
      - Migrated prototype accesses (e.g., game.item_prototypes) to the new prototypes API.
      - Tweaked prototype signals to new API
      - Changed OnEvent Create handlers to new API
      - Replaced the deprecated zoom_to_world function with the new set_controller API to handle drill zoom-ins
      - Replaced create_entity('flying-text') with create_local_flying_text
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2024-10-20
  Bugfixes:
    - Fixed a bug where drill status would not update properly on removal
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2024-10-16
  Changes:
    - Refactored and organized scripts
    - Tick optimizations
      - Delayed surface refresh to every 5 minutes (On Drill Create is instant)
      - Added Max drills per tick setting to cap refresh UPS consumption
      - Drills will now only refresh up to the set limit each tick to spread out the workload
    - Updated Localizations
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2024-10-15
  Features:
    - Added custom icons for each status
  Bugfixes:
    - Resolved Issue with FLIB Mod Conflict on Hover